Fri May 15 21:41:06 1998  Per Bothner  <bothner@cygnus.com>

	* DFloNum.java (compare(IntNum,IntNum,double)):  Exactly compare
	ation to double.
	(compare, compare_reversed):  Use new compare function.

	* IntNum.java (times):  Extra overload, and better efficiency.

Sat Apr  4 17:40:14 1998  Per Bothner  <bothner@cygnus.com>

	* Makefile.am:  Re-write to compile all out-of-date *.java at once.
	* overview.html:  New file.

Tue Mar 10 22:14:40 1998  Per Bothner  <bothner@cygnus.com>

	* Makefile.am (install-html):  New rule.

Mon Feb 16 15:54:54 1998  Per Bothner  <bothner@cygnus.com>

	* IntNum.java (valueOf):  New overloaded method.

Tue Feb  3 12:53:54 1998  Per Bothner  <bothner@cygnus.com>

	* IntNum.java, DFlotNum.java:  Update calls to gnu.bytecode methods.

Thu Jan 15 13:42:16 1998  Alcibiades Petrofsky <albatros@wco.com>

	* Complex.java (imMinusOne):  New method.
	(toString):  Minor fixes.
	* DComplex.java (toString):  Print infinities and NaN using #i1/0 etc.
	* DFloNum.java (constructor):  Make sure -0.0 is handled correctly.
	(toString):  Print infinities and NaN using #i1/0 etc.

	* IntNum.java (negate):  Change return value to boolean (for overflow).
	(setNegative):  Fix so -2**63 works.

Sat Jan 10 15:08:24 1998  Per Bothner  <bothner@cygnus.com>

	* IntNum.java (getAbsolute):  Fix for negative numbers.

Sat Jan 10 13:53:19 1998  Alcibiades Petrofsky <albatros@wco.com>

	* IntNum.java (roundToDouble, checkBits):  New methods.
	(doubleValue):  Use roundToDouble.
	* IntFraction.java (doubleValue):  Use roundToDouble.

Sun Dec 14 15:52:08 1997  Per Bothner  <bothner@cygnus.com>

	* IntNum.java (setAdd);  Fix to handle negative int argument.

Tue Dec  9 14:59:02 1997  James P. White <jim@pagesmiths.com>

	* MPN.java (udiv_qrnnd):  Fix carry bug.

Thu Nov 27 21:37:03 1997  Per Bothner  <bothner@cygnus.com>

	* DFloNum.java, IntNum.java (emit):  Update for gnu.bytecode changes.

Sat Nov  1 20:53:37 1997  Per Bothner  <bothner@cygnus.com>
